force-app/main/default/objects/Flight__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>