force-app/main/default/objects/Flight__c/fields/Arrival_Airport_Name__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Name__c</fullName>
    <formula>Arrival__r.Name</formula>
    <label>Arrival Airport Name</label>
    <type>Text</type>
</CustomField>