force-app/main/default/objects/Flight__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Departure)</relationshipLabel>
    <relationshipName>Departures</relationshipName>
    <type>Lookup</type>
</CustomField>