force-app/main/default/objects/Flight__c/fields/Distance_in_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_in_km__c</fullName>
    <label>Distance (in km)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>